# wedowind

./: .gitignore  a6c706f0-4ff4-4444-94df-229141d86dae_aventa_rotor_icing_structure_metadata.json  data.js  main.py  notebook.ipynb  pyproject.toml  start.ipynb
main/: icing.ipynb  icing.py  imbalance.Ipynb  pitch_drive.ipynb
src/: model.py  preprocess.py  test.py
