[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.8.1",
    "clip",
    "diffusers>=0.34.0",
    "google>=3.0.0",
    "h5py>=3.13.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "plotly>=6.1.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.53.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
